--- a/index.html
+++ b/index.html
@@ -30,14 +30,8 @@
         <input type="number" class="form-control" id="itemPrice" required>
       </div>
       <div class="form-group">
-        <label for="bankSelect">البنك:</label>
-        <select class="form-control" id="bankSelect">
-          <option value="0.06">بنك اسكندرية</option>
-          <option value="0.10">بنك تيلدا</option>
-          <option value="0.08">بنك القاهرة</option>
-          <option value="0.1">بنك مصر</option>
-          <option value="0.12">بنك الأهلي</option>
-        </select>
+        <label for="taxPercentage">النسبة المئوية للضريبة:</label>
+        <input type="number" class="form-control" id="taxPercentage" required>
       </div>
       <button type="submit" class="btn btn-success">حساب</button>
     </form>
@@ -56,8 +50,8 @@
     document.getElementById('priceForm').addEventListener('submit', function(event) {
       event.preventDefault();
       var itemPrice = parseFloat(document.getElementById('itemPrice').value);
-      var bankSelect = parseFloat(document.getElementById('bankSelect').value);
-      var finalPrice = itemPrice + (itemPrice * bankSelect);
+      var taxPercentage = parseFloat(document.getElementById('taxPercentage').value);
+      var finalPrice = itemPrice + (itemPrice * (taxPercentage / 100));
       document.getElementById('finalPrice').textContent = finalPrice.toFixed(0);
       document.getElementById('result').style.display = 'block';
     });
