--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
   <h2>برعاية تراستيد مجرم</h2>
   <h3>01140905700</h3> <br><br>
 
-  <h2>مطور التطبيق : 01101596210</h2>
+  <h2>مطور التطبيق <br><br> 01101596210</h2>
 </center>
   <script>
     document.getElementById('priceForm').addEventListener('submit', function(event) {
