--- a/index.html
+++ b/index.html
@@ -22,6 +22,22 @@
   </style>
 </head>
 <body>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <a class="navbar-brand" href="#">تطبيق الضريبة وتحويل العملات</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarNav">
+    <ul class="navbar-nav ml-auto">
+      <li class="nav-item active">
+        <a class="nav-link" href="index.html">الضريبة</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="currency.html">تغيير العملات</a>
+      </li>
+    </ul>
+  </div>
+</nav>
   <div class="container">
     <h1>حساب سعر الشحنة بعد الضريبة</h1>
     <form id="priceForm">
