--- a/dareba.html
+++ b/dareba.html
@@ -29,8 +29,11 @@
   </button>
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav ml-auto">
+       <li class="nav-item active">
+        <a class="nav-link" href="index.html">الرئيسية</a>
+      </li>
       <li class="nav-item active">
-        <a class="nav-link" href="index.html">الضريبة</a>
+        <a class="nav-link" href="dareba.html">الضريبة</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="currency.html">تغيير العملات</a>
