--- a/index.html
+++ b/index.html
@@ -25,22 +25,25 @@
   </style>
 </head>
 <body>
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#">تطبيق مساعد التراستيد   </a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav ml-auto">
-        <li class="nav-item active">
-          <a class="nav-link" href="dareba.html">الضريبة</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="currency.html">تغيير العملات</a>
-        </li>
-      </ul>
-    </div>
-  </nav>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <a class="navbar-brand" href="#">تطبيق الضريبة وتحويل العملات</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarNav">
+    <ul class="navbar-nav ml-auto">
+       <li class="nav-item active">
+        <a class="nav-link" href="index.html">الرئيسية</a>
+      </li>
+      <li class="nav-item active">
+        <a class="nav-link" href="dareba.html">الضريبة</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="currency.html">تغيير العملات</a>
+      </li>
+    </ul>
+  </div>
+</nav>
   <br>
   <center>
 <h2>ارخص سعر ف تخليص الشحنات</h2>
