--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav ml-auto">
       <li class="nav-item active">
-        <a class="nav-link" href="index.html">تخليص</a>
+        <a class="nav-link" href="dareba.html">تخليص</a>
       </li>
       <li class="nav-item active">
-        <a class="nav-link" href="dareba.html">الضريبة</a>
+        <a class="nav-link" href="index.html">الضريبة</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="currency.html">تغيير العملات</a>
