--- a/currency.html
+++ b/currency.html
@@ -24,17 +24,17 @@
 </head>
 <body>
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="#">تطبيق الضريبة وتحويل العملات</a>
+  <a class="navbar-brand" href="#"><span class="btn btn-danger">قريباا</span>  ارخص شحنة</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav ml-auto">
-       <li class="nav-item active">
-        <a class="nav-link" href="index.html">الرئيسية</a>
+      <li class="nav-item active">
+        <a class="nav-link" href="dareba.html">تخليص</a>
       </li>
       <li class="nav-item active">
-        <a class="nav-link" href="dareba.html">الضريبة</a>
+        <a class="nav-link" href="index.html">الضريبة</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="currency.html">تغيير العملات</a>
