--- a/index.html
+++ b/index.html
@@ -55,7 +55,11 @@
       <button type="submit" class="btn btn-success">حساب</button>
     </form>
     <div id="result" style="display: none;">
-      <h2>النتيجة:</h2>
+      <h2>النتيجة:</h2> <br>
+      <p>
+        دا السعر الي هيقف عليك
+      </p>
+      <br>
       <p id="finalPrice"></p>
     </div>
   </div>
