--- a/index.html
+++ b/index.html
@@ -55,7 +55,8 @@
       <button type="submit" class="btn btn-success">حساب</button>
     </form>
     <div id="result" style="display: none;">
-      <h2>دا السعر الي هيقف عليك :</h2>
+      <h2>النتيجة:</h2> <br>
+      <p>دا السعر الي هيقف عليك </p>
       <p id="finalPrice"></p>
     </div>
   </div>
