--- a/currency.html
+++ b/currency.html
@@ -24,7 +24,7 @@
 </head>
 <body>
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="#">  ارخص شحنة</a>
+  <a class="navbar-brand" href="#">ارخص شحنة</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -38,6 +38,9 @@
       </li>
       <li class="nav-item">
         <a class="nav-link" href="currency.html">تغيير العملات</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="contact.html">المطورين</a>
       </li>
     </ul>
   </div>
