--- a/contact.html
+++ b/contact.html
@@ -51,7 +51,9 @@
 <div class="container">
   <div class="row">
     <div class="col-md-6 offset-md-3">
+      <center>
       <h3>معلومات المطورين والاتصال</h3>
+        </center>
       <br>
       <div class="card">
         <div class="card-body">
