--- a/index.html
+++ b/index.html
@@ -22,28 +22,31 @@
   </style>
 </head>
 <body>
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="#">ارخص شحنة</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="collapse navbar-collapse" id="navbarNav">
-    <ul class="navbar-nav ml-auto">
-      <li class="nav-item active">
-        <a class="nav-link" href="dareba.html">تخليص</a>
-      </li>
-      <li class="nav-item active">
-        <a class="nav-link" href="index.html">الضريبة</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="currency.html">تغيير العملات</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="contact.html">المطورين</a>
-      </li>
-    </ul>
-  </div>
-</nav>
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <a class="navbar-brand" href="#">ارخص شحنة</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav ml-auto">
+        <li class="nav-item active">
+          <a class="nav-link" href="dareba.html">تخليص</a>
+        </li>
+        <li class="nav-item active">
+          <a class="nav-link" href="index.html">الضريبة</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="currency.html">تغيير العملات</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="control.html">نظام الادارة </a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="contact.html">المطورين</a>
+        </li>
+      </ul>
+    </div>
+  </nav>
   <div class="container">
     <h1>حساب سعر الشحنة بعد الضريبة</h1>
     <form id="priceForm">
